[gd_scene load_steps=26 format=3 uid="uid://bbnx8b043hjf2"]

[ext_resource type="Theme" uid="uid://chjt3puiiisoj" path="res://UI/Garage.tres" id="1_4twht"]
[ext_resource type="Texture2D" uid="uid://uip7dygd3bo7" path="res://Textures/UI/Car_Builder/Suspension_Icon.png" id="2_8npnv"]
[ext_resource type="PackedScene" uid="uid://cc7166wai1oi2" path="res://Sound/button_click.tscn" id="2_68vpc"]
[ext_resource type="Script" path="res://UI/Part_List_Ui_Car.gd" id="2_bxkc2"]
[ext_resource type="Texture2D" uid="uid://d4h1bcr2rm7ce" path="res://Textures/UI/Car_Builder/Wheels_Icon.png" id="3_jc677"]
[ext_resource type="Texture2D" uid="uid://djfvlgdxby4p0" path="res://Textures/UI/Car_Builder/Tires_Icon.png" id="4_h4lda"]
[ext_resource type="Texture2D" uid="uid://d4ghrc2qkvxec" path="res://Textures/UI/Car_Builder/Brakes_Icon.png" id="5_b0wia"]
[ext_resource type="Texture2D" uid="uid://b5r2m3ihg1e2m" path="res://Textures/UI/Car_Builder/Engine_Icon.png" id="6_r2ski"]
[ext_resource type="Texture2D" uid="uid://b0e0i6lo5pskd" path="res://Textures/UI/Car_Builder/Body_Icon.png" id="7_dklki"]
[ext_resource type="Texture2D" uid="uid://cmi7pfnf37hmo" path="res://Textures/UI/Car_Builder/Suspension_Wheel_Group_Icon.png" id="8_lqbre"]
[ext_resource type="Texture2D" uid="uid://dc04na4cnudqy" path="res://Textures/UI/Car_Builder/Driveshaft_Frame_Group_Icon.png" id="9_yf5w5"]
[ext_resource type="Texture2D" uid="uid://tu0nicsewtrh" path="res://Textures/UI/Car_Builder/Front_Bumper_icon.png" id="10_qf2am"]
[ext_resource type="Texture2D" uid="uid://tvgjig4vy4es" path="res://Textures/UI/Car_Builder/Rear_Bumper_icon.png" id="11_b3qte"]
[ext_resource type="Texture2D" uid="uid://0r0fbp775igk" path="res://Textures/UI/Car_Builder/Fenders_icon.png" id="12_e7qcq"]
[ext_resource type="Texture2D" uid="uid://bv243ffedk654" path="res://Textures/UI/Car_Builder/Hood_icon.png" id="13_6grb3"]
[ext_resource type="Texture2D" uid="uid://52fmdl2iju83" path="res://Textures/UI/Car_Builder/Mirrors_icon.png" id="14_fwcjr"]
[ext_resource type="Texture2D" uid="uid://1t2ca5n3a08j" path="res://Textures/UI/Car_Builder/Headlights_icon.png" id="15_4qsli"]
[ext_resource type="Texture2D" uid="uid://br3hiruyjmtq4" path="res://Textures/UI/Car_Builder/Taillights_icon.png" id="16_pq0k1"]
[ext_resource type="Texture2D" uid="uid://emt8us3bdxel" path="res://Textures/UI/Car_Builder/Spoiler_icon.png" id="17_2rtuw"]
[ext_resource type="Texture2D" uid="uid://dssb1jo0qy8g" path="res://Textures/UI/Car_Builder/Subframe_Icon.png" id="18_fu4r0"]
[ext_resource type="Texture2D" uid="uid://b052xgutber5a" path="res://Textures/UI/Car_Builder/Driveshaft_Icon.png" id="19_g20hn"]
[ext_resource type="Texture2D" uid="uid://lmdtsi0epq1m" path="res://Textures/UI/Car_Builder/Gearbox_Icon.png" id="20_lrchi"]
[ext_resource type="Texture2D" uid="uid://c8ih56bayhlsn" path="res://Textures/UI/Car_Builder/Radiator_Icon.png" id="21_tcbft"]
[ext_resource type="Texture2D" uid="uid://be5t2p5n45n73" path="res://Textures/UI/Car_Builder/Exhaust_Icon.png" id="22_0k6s2"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_04bf7"]
light_mode = 1

[node name="Car Builder" type="Node2D"]
scale = Vector2(0.3, 0.3)

[node name="Control" type="Control" parent="."]
light_mask = 2
material = SubResource("CanvasItemMaterial_04bf7")
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1017.74
offset_top = 509.832
offset_right = 1017.74
offset_bottom = 509.832
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme = ExtResource("1_4twht")

[node name="Suspension_Group" type="HBoxContainer" parent="Control"]
visible = false
light_mask = 2
material = SubResource("CanvasItemMaterial_04bf7")
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
offset_left = -667.0
offset_top = -616.0
offset_right = 17.0
offset_bottom = -532.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="Suspension_button" type="Button" parent="Control/Suspension_Group"]
light_mask = 2
material = SubResource("CanvasItemMaterial_04bf7")
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "    "
icon = ExtResource("2_8npnv")
icon_alignment = 1
expand_icon = true

[node name="Wheels_button" type="Button" parent="Control/Suspension_Group"]
light_mask = 2
material = SubResource("CanvasItemMaterial_04bf7")
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "    "
icon = ExtResource("3_jc677")
icon_alignment = 1
expand_icon = true

[node name="Tires_button" type="Button" parent="Control/Suspension_Group"]
light_mask = 2
material = SubResource("CanvasItemMaterial_04bf7")
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "    "
icon = ExtResource("4_h4lda")
icon_alignment = 1
expand_icon = true

[node name="Brakes_button" type="Button" parent="Control/Suspension_Group"]
light_mask = 2
material = SubResource("CanvasItemMaterial_04bf7")
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "    "
icon = ExtResource("5_b0wia")
icon_alignment = 1
expand_icon = true

[node name="Main_Group" type="HBoxContainer" parent="Control"]
visible = false
light_mask = 2
material = SubResource("CanvasItemMaterial_04bf7")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -667.0
offset_top = -616.0
offset_right = 17.0
offset_bottom = -532.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="Engine_button" type="Button" parent="Control/Main_Group"]
light_mask = 2
material = SubResource("CanvasItemMaterial_04bf7")
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "    "
icon = ExtResource("6_r2ski")
icon_alignment = 1
expand_icon = true

[node name="Body_button" type="Button" parent="Control/Main_Group"]
light_mask = 2
material = SubResource("CanvasItemMaterial_04bf7")
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "    "
icon = ExtResource("7_dklki")
icon_alignment = 1
expand_icon = true

[node name="Suspension_wheel__button" type="Button" parent="Control/Main_Group"]
light_mask = 2
material = SubResource("CanvasItemMaterial_04bf7")
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "    "
icon = ExtResource("8_lqbre")
icon_alignment = 1
expand_icon = true

[node name="Frame_button" type="Button" parent="Control/Main_Group"]
light_mask = 2
material = SubResource("CanvasItemMaterial_04bf7")
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "    "
icon = ExtResource("9_yf5w5")
icon_alignment = 1
expand_icon = true

[node name="Body_Group" type="HBoxContainer" parent="Control"]
visible = false
light_mask = 2
material = SubResource("CanvasItemMaterial_04bf7")
custom_minimum_size = Vector2(20, 0)
layout_mode = 1
offset_left = -667.0
offset_top = -616.0
offset_right = 17.0
offset_bottom = -532.0
theme_override_constants/separation = 12

[node name="Front _bumper_button" type="Button" parent="Control/Body_Group"]
light_mask = 2
material = SubResource("CanvasItemMaterial_04bf7")
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "    "
icon = ExtResource("10_qf2am")
icon_alignment = 1
expand_icon = true

[node name="Rear_bumper_button" type="Button" parent="Control/Body_Group"]
light_mask = 2
material = SubResource("CanvasItemMaterial_04bf7")
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "    "
icon = ExtResource("11_b3qte")
icon_alignment = 1
expand_icon = true

[node name="Fenders_button" type="Button" parent="Control/Body_Group"]
light_mask = 2
material = SubResource("CanvasItemMaterial_04bf7")
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "    "
icon = ExtResource("12_e7qcq")
icon_alignment = 1
expand_icon = true

[node name="Hood_button" type="Button" parent="Control/Body_Group"]
light_mask = 2
material = SubResource("CanvasItemMaterial_04bf7")
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "    "
icon = ExtResource("13_6grb3")
icon_alignment = 1
expand_icon = true

[node name="Mirrors_button" type="Button" parent="Control/Body_Group"]
light_mask = 2
material = SubResource("CanvasItemMaterial_04bf7")
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "    "
icon = ExtResource("14_fwcjr")
icon_alignment = 1
expand_icon = true

[node name="Headlights_button" type="Button" parent="Control/Body_Group"]
light_mask = 2
material = SubResource("CanvasItemMaterial_04bf7")
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "    "
icon = ExtResource("15_4qsli")
icon_alignment = 1
expand_icon = true

[node name="Taillights_button" type="Button" parent="Control/Body_Group"]
light_mask = 2
material = SubResource("CanvasItemMaterial_04bf7")
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "    "
icon = ExtResource("16_pq0k1")
icon_alignment = 1
expand_icon = true

[node name="Spoiler_button" type="Button" parent="Control/Body_Group"]
light_mask = 2
material = SubResource("CanvasItemMaterial_04bf7")
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "    "
icon = ExtResource("17_2rtuw")
icon_alignment = 1
expand_icon = true

[node name="Frame_Group" type="HBoxContainer" parent="Control"]
visible = false
light_mask = 2
material = SubResource("CanvasItemMaterial_04bf7")
custom_minimum_size = Vector2(20, 0)
layout_mode = 1
offset_left = -667.0
offset_top = -616.0
offset_right = 17.0
offset_bottom = -532.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="Subframe_button" type="Button" parent="Control/Frame_Group"]
light_mask = 2
material = SubResource("CanvasItemMaterial_04bf7")
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "    "
icon = ExtResource("18_fu4r0")
icon_alignment = 1
expand_icon = true

[node name="Driveshaft_button" type="Button" parent="Control/Frame_Group"]
light_mask = 2
material = SubResource("CanvasItemMaterial_04bf7")
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "    "
icon = ExtResource("19_g20hn")
icon_alignment = 1
expand_icon = true

[node name="Gearbox_button" type="Button" parent="Control/Frame_Group"]
light_mask = 2
material = SubResource("CanvasItemMaterial_04bf7")
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "    "
icon = ExtResource("20_lrchi")
icon_alignment = 1
expand_icon = true

[node name="Radiator_button" type="Button" parent="Control/Frame_Group"]
light_mask = 2
material = SubResource("CanvasItemMaterial_04bf7")
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "    "
icon = ExtResource("21_tcbft")
icon_alignment = 1
expand_icon = true

[node name="Exhaust_button" type="Button" parent="Control/Frame_Group"]
light_mask = 2
material = SubResource("CanvasItemMaterial_04bf7")
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "    "
icon = ExtResource("22_0k6s2")
icon_alignment = 1
expand_icon = true

[node name="Save" type="Button" parent="Control"]
visible = false
light_mask = 2
material = SubResource("CanvasItemMaterial_04bf7")
layout_mode = 0
offset_left = 10.0
offset_top = 140.0
offset_right = 143.0
offset_bottom = 229.0
text = " Save "

[node name="Load" type="Button" parent="Control"]
visible = false
light_mask = 2
material = SubResource("CanvasItemMaterial_04bf7")
layout_mode = 0
offset_left = 30.0
offset_top = 190.0
offset_right = 165.0
offset_bottom = 279.0
text = "Load  
"

[node name="Add_engine_button" type="Button" parent="Control"]
visible = false
light_mask = 2
material = SubResource("CanvasItemMaterial_04bf7")
layout_mode = 2
offset_left = -386.763
offset_top = -620.0
offset_right = -188.763
offset_bottom = -541.0
text = "Add Engine"

[node name="Add" type="Button" parent="Control"]
visible = false
light_mask = 2
material = SubResource("CanvasItemMaterial_04bf7")
layout_mode = 0
offset_left = 10.0
offset_top = 20.0
offset_right = 145.0
offset_bottom = 109.0
text = " Add "

[node name="Button_Click" parent="." instance=ExtResource("2_68vpc")]
position = Vector2(-355.694, -210.168)

[node name="ItemList" type="ItemList" parent="."]
light_mask = 2
material = SubResource("CanvasItemMaterial_04bf7")
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 336.439
offset_right = 854.439
offset_bottom = 511.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 0
item_count = 1
item_0/text = ""
script = ExtResource("2_bxkc2")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="TextEdit" type="TextEdit" parent="."]
light_mask = 2
material = SubResource("CanvasItemMaterial_04bf7")
offset_left = 335.981
offset_top = 516.579
offset_right = 1043.98
offset_bottom = 698.579
placeholder_text = "Part description"
editable = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
wrap_mode = 1
scroll_smooth = true

[node name="Stats" type="TextEdit" parent="."]
light_mask = 2
material = SubResource("CanvasItemMaterial_04bf7")
offset_left = 862.439
offset_right = 1045.44
offset_bottom = 510.0
placeholder_text = "Stats"
editable = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
wrap_mode = 1
scroll_smooth = true

[connection signal="pressed" from="Control/Suspension_Group/Suspension_button" to="ItemList" method="_on_suspension_button_pressed"]
[connection signal="pressed" from="Control/Suspension_Group/Wheels_button" to="ItemList" method="_on_wheels_button_pressed"]
[connection signal="pressed" from="Control/Suspension_Group/Tires_button" to="ItemList" method="_on_tires_button_pressed"]
[connection signal="pressed" from="Control/Suspension_Group/Brakes_button" to="ItemList" method="_on_brakes_button_pressed"]
[connection signal="pressed" from="Control/Main_Group/Engine_button" to="ItemList" method="_on_engine_button_pressed"]
[connection signal="pressed" from="Control/Main_Group/Body_button" to="ItemList" method="_on_body_button_pressed"]
[connection signal="pressed" from="Control/Main_Group/Suspension_wheel__button" to="ItemList" method="_on_suspension_wheel__button_pressed"]
[connection signal="pressed" from="Control/Main_Group/Frame_button" to="ItemList" method="_on_frame_button_pressed"]
[connection signal="pressed" from="Control/Body_Group/Front _bumper_button" to="ItemList" method="_on_front__bumper_button_pressed"]
[connection signal="pressed" from="Control/Body_Group/Rear_bumper_button" to="ItemList" method="_on_rear_bumper_button_pressed"]
[connection signal="pressed" from="Control/Body_Group/Fenders_button" to="ItemList" method="_on_fenders_button_pressed"]
[connection signal="pressed" from="Control/Body_Group/Hood_button" to="ItemList" method="_on_hood_button_pressed"]
[connection signal="pressed" from="Control/Body_Group/Mirrors_button" to="ItemList" method="_on_mirrors_button_pressed"]
[connection signal="pressed" from="Control/Body_Group/Headlights_button" to="ItemList" method="_on_headlights_button_pressed"]
[connection signal="pressed" from="Control/Body_Group/Taillights_button" to="ItemList" method="_on_taillights_button_pressed"]
[connection signal="pressed" from="Control/Body_Group/Spoiler_button" to="ItemList" method="_on_spoiler_button_pressed"]
[connection signal="pressed" from="Control/Frame_Group/Subframe_button" to="ItemList" method="_on_subframe_button_pressed"]
[connection signal="pressed" from="Control/Frame_Group/Driveshaft_button" to="ItemList" method="_on_driveshaft_button_pressed"]
[connection signal="pressed" from="Control/Frame_Group/Gearbox_button" to="ItemList" method="_on_gearbox_button_pressed"]
[connection signal="pressed" from="Control/Frame_Group/Radiator_button" to="ItemList" method="_on_radiator_button_pressed"]
[connection signal="pressed" from="Control/Frame_Group/Exhaust_button" to="ItemList" method="_on_exhaust_button_pressed"]
[connection signal="pressed" from="Control/Save" to="ItemList" method="_on_save_pressed"]
[connection signal="pressed" from="Control/Load" to="ItemList" method="_on_load_pressed"]
[connection signal="pressed" from="Control/Add_engine_button" to="ItemList" method="_on_add_engine_button_pressed"]
[connection signal="pressed" from="Control/Add" to="ItemList" method="_on_add_pressed"]
[connection signal="item_clicked" from="ItemList" to="ItemList" method="_on_item_clicked"]
[connection signal="item_selected" from="ItemList" to="ItemList" method="_on_item_selected"]
[connection signal="timeout" from="Timer" to="ItemList" method="_on_timer_timeout"]
